--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,34 @@
+::-webkit-input-placeholder {color:#bdadab; 
+    font-family: 'Sansation_Light'; 
+    font-size: 15px; 
+    text-align: center;
+    }
+::-moz-placeholder          {color:#bdadab; 
+    font-family: 'Sansation_Light'; 
+    font-size: 15px; 
+    text-align: center;
+    }            /* Firefox 19+ */
+:-moz-placeholder           {color:#bdadab; 
+    font-family: 'Sansation_Light'; 
+    font-size: 15px;                 /* Firefox 18- */
+    text-align: center;
+    } 
+:-ms-input-placeholder      {color:#bdadab; 
+    font-family: 'Sansation_Light'; 
+    font-size: 15px; 
+    text-align: center;
+    }
+
+@font-face {
+font-family: 'Sansation_Light';
+src: url('../fonts/Sansation_Light.eot');
+src: local('☺'), url('../fonts/Sansation_Light.woff') format('woff'), url('../fonts/Sansation_Light.ttf') format('truetype'), url('../fonts/Sansation_Light.svg') format('svg');
+font-weight: normal;
+font-style: normal;
+}
+
 body {
+    font-family: 'Sansation_Light';
     margin: 0;
     padding: 0;
 }
