--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,21 @@
 ::-webkit-input-placeholder {color:#bdadab; 
     font-family: 'Sansation_Light'; 
-    font-size: 15px; 
+    font-size: 20px; 
     text-align: center;
     }
 ::-moz-placeholder          {color:#bdadab; 
     font-family: 'Sansation_Light'; 
-    font-size: 15px; 
+    font-size: 20px; 
     text-align: center;
     }            /* Firefox 19+ */
 :-moz-placeholder           {color:#bdadab; 
     font-family: 'Sansation_Light'; 
-    font-size: 15px;                 /* Firefox 18- */
+    font-size: 20px;                 /* Firefox 18- */
     text-align: center;
     } 
 :-ms-input-placeholder      {color:#bdadab; 
     font-family: 'Sansation_Light'; 
-    font-size: 15px; 
+    font-size: 20px; 
     text-align: center;
     }
 
@@ -31,6 +31,7 @@ body {
     font-family: 'Sansation_Light';
     margin: 0;
     padding: 0;
+    font-size: 30px;
 }
 
 .invalid { 
@@ -49,10 +50,6 @@ body {
      color: #07cc07; 
 }
 
-.input_date {
-    outline: none;
-}
-
 .container {
     max-width: 1110px;
 }
@@ -61,4 +58,19 @@ body {
     padding-top: 150px;
     text-align: center;
     align-self: center;
+}
+
+.input_date {
+    font-family: 'Sansation_Light';
+    outline: none;
+    height: 30px;
+    width: 300px;
+    font-size: 20px;
+    border-radius: 5px;
+}
+
+.btn {
+    height: 36px;
+    width: 70px;
+    font-size: 15px;
 }
