--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,7 @@ body {
     border-radius: 5px;
     box-sizing: border-box;
     border-width: 1px;
-    padding: 0;
+    padding: 15px;
 }
 
 .btn {
